@@ -512,17 +512,17 @@ proxy_https_connect_cb (SoupMessage *msg, gpointer user_data)
 {
 	gboolean *ret = user_data;
 
+	/*
+	 * Avoid releasing the connection on message free
+	 */
+	msg->connection = NULL;
+
 	if (!SOUP_MESSAGE_IS_ERROR (msg)) {
 		/*
 		 * Bless the connection to SSL
 		 */
 		msg->connection->channel = 
 			soup_ssl_get_iochannel (msg->connection->channel);
-
-		/*
-		 * Avoid releasing the connection on message free
-		 */
-		msg->connection = NULL;
 		
 		*ret = TRUE;
 	}
